@@ -1,13 +1,13 @@
 package com.willfp.eco.core.web;
 
 import com.willfp.eco.core.EcoPlugin;
-import org.jetbrains.annotations.NotNull;
-
 import java.io.IOException;
 import java.io.InputStream;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.Scanner;
 import java.util.function.Consumer;
+import org.jetbrains.annotations.NotNull;
 
 /**
  * Class to check for updates of a plugin on spigot.
@@ -34,16 +34,15 @@ public class UpdateChecker {
      */
     public void getVersion(@NotNull final Consumer<? super String> callback) {
         this.getPlugin().getScheduler().runAsync(() -> {
-            try {
-                InputStream inputStream = new URL(
-                        "https://api.polymart.org/v1/getResourceInfoSimple?key=version&resource_id=" + this.getPlugin().getResourceId()
-                ).openStream();
-                Scanner scanner = new Scanner(inputStream);
+            try (InputStream inputStream = new URI(
+                    "https://api.polymart.org/v1/getResourceInfoSimple?key=version&resource_id=" + this.getPlugin().getResourceId()
+            ).toURL().openStream();
+                 Scanner scanner = new Scanner(inputStream)) {
 
                 if (scanner.hasNext()) {
                     callback.accept(scanner.next());
                 }
-            } catch (IOException e) {
+            } catch (IOException | URISyntaxException e) {
                 this.getPlugin().getLogger().warning("Failed to check for updates: " + e.getMessage());
             }
         });
